Adding UI control to change total size being read or written

--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,12 @@
     </header>
     
     <div class="content">
+      <!-- Control to change total size being written / read -->
+      <div class="segmented-control">
+        <a class="control-item active" id="anchorTotalSizeSmall">8mb</a>
+        <a class="control-item" id="anchorTotalSizeMedium">32mb</a>
+        <a class="control-item" id="anchorTotalSizeLarge">128mb</a>
+      </div>
 
       <!-- Results -->
       <div class="card">
