Added status in bottom bar / updated screenshot / won't let user start a benchmark if one is running

--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
 
     <!-- Header -->
     <header class="bar bar-nav">
-        <h1 class="title" id="headerTitle">Hybrid Store Perf Tester</h1>
+      <h1 class="title" id="headerTitle">Hybrid Store Perf Tester</h1>
     </header>
     
     <div class="content">
@@ -77,6 +77,7 @@
       <!-- Buttons for main screen -->
       <button class="btn pull-left" id="btnBenchSmall">Small</button>
       <button class="btn pull-left" id="btnBenchMedium">Medium</button>
+      <h1 class="title" id="statusBar"></h1>
       <button class="btn pull-right" id="btnBenchExtraLarge">Extra Large</button>
       <button class="btn pull-right" id="btnBenchLarge">Large</button>
     </nav>
